--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -57,4 +57,5 @@
     <string name="text_delete">删除</string>
     <string name="text_not_editable">不可编辑</string>
     <string name="text_javascript_test">JavaScript 测试</string>
+    <string name="text_establish_connection">与%s建立连接</string>
 </resources>
