--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,4 +139,5 @@
     <string name="text_delete">Delete</string>
     <string name="text_not_editable">Not editable</string>
     <string name="text_javascript_test">JavaScript Test</string>
+    <string name="text_establish_connection">Establish connection with %s</string>
 </resources>
