加入媒体控制 识别-媒体抑制

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -58,4 +58,5 @@
     <string name="text_not_editable">不可编辑</string>
     <string name="text_javascript_test">JavaScript 测试</string>
     <string name="text_establish_connection">与%s建立连接</string>
+    <string name="text_disconnect_with_debugger">与远程调试器断开连接</string>
 </resources>
