--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,4 +140,5 @@
     <string name="text_not_editable">Not editable</string>
     <string name="text_javascript_test">JavaScript Test</string>
     <string name="text_establish_connection">Establish connection with %s</string>
+    <string name="text_disconnect_with_debugger">Disconnect remote debugger</string>
 </resources>
