加入广告终结

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -61,4 +61,5 @@
     <string name="text_disconnect_with_debugger">与远程调试器断开连接</string>
     <string name="text_add_follow_action">添加跟随操作</string>
     <string name="text_parent_action">上级操作</string>
+    <string name="text_tooltips_select_script_type">选择脚本类型</string>
 </resources>
