--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -11,6 +11,7 @@
     <string name="text_settings">设置</string>
     <string name="text_search">搜索</string>
     <string name="title_activity_settings">设置</string>
+    <string name="title_advanced_settings">高级设置</string>
     <string name="text_select_application">选择应用</string>
     <string name="text_refresh">刷新</string>
     <string name="title_new_inst">新建命令</string>
@@ -67,4 +68,21 @@
     <string name="text_listening">识别中</string>
     <string name="text_run">执行</string>
     <string name="text_optional">可选</string>
+    <string name="text_help">帮助</string>
+    <string name="text_msg_delete_action_node">此操作会同时删除此操作的跟随操作</string>
+    <string name="text_confirm_2_del">确认删除</string>
+    <string name="text_about">关于</string>
+    <string name="text_advanced_features">高级功能</string>
+    <string name="text_show_toast_when_remove_ad">去除广告时显示通知</string>
+    <string name="text_sound_model">声音模型</string>
+    <string name="text_volume">音量</string>
+    <string name="text_speak_speed">语速</string>
+    <string name="text_open_ad_killer_service">去广告服务</string>
+    <string name="text_remote_debug">远程调试</string>
+    <string name="text_open_voice_wakeup">开启语音唤醒</string>
+    <string name="text_play_voice_message">播放语音消息</string>
+    <string name="text_debug_code">代码调试</string>
+    <string name="text_voice_control">语音控制</string>
+    <string name="text_voice_control_dialog">控制对话框</string>
+    <string name="text_mark_management">标记管理</string>
 </resources>
