--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -184,5 +184,6 @@
     <string name="text_share">Share</string>
     <string name="text_sync">同步</string>
     <string name="text_vibrate_reco_begin">开始识别时震动</string>
+    <string name="text_net_err">Network error</string>
 
 </resources>
