充值服务 inApp同步 inApp -> Global user info ui

--- a/Common/src/main/res/values-zh/strings.xml
+++ b/Common/src/main/res/values-zh/strings.xml
@@ -4,4 +4,6 @@
     <string name="text_select_script">选择脚本</string>
     <string name="text_stop">停止</string>
     <string name="text_run">执行</string>
+    <string name="text_err_not_belong_inapp_inst">失败：不属于App内命令</string>
+    <string name="test_have_done">完成</string>
 </resources>
