--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -59,13 +59,13 @@
     <string name="text_not_editable">不可编辑</string>
     <string name="text_javascript_test">JavaScript 测试</string>
     <string name="text_establish_connection">与%s建立连接</string>
-    <string name="text_disconnect_with_debugger">与远程调试器断开连接</string>
+    <string name="text_disconnect_with_debugger">远程调试关闭</string>
     <string name="text_add_follow_action">添加跟随操作</string>
     <string name="text_parent_action">上级操作</string>
     <string name="text_tooltips_select_script_type">选择脚本类型</string>
     <string name="text_executing">执行中</string>
     <string name="text_parsing">解析中</string>
-    <string name="text_listening">识别中</string>
+    <string name="text_listening">聆听中</string>
     <string name="text_run">执行</string>
     <string name="text_optional">可选</string>
     <string name="text_help">帮助</string>
@@ -99,7 +99,31 @@
     <string name="text_get_ver_code">获取验证码</string>
     <string name="text_email">邮箱</string>
     <string name="text_share">分享</string>
+    <string name="text_upgrade">更新</string>
     <string name="text_sync">同步</string>
     <string name="text_vibrate_reco_begin">开始识别时震动</string>
     <string name="text_net_err">网络错误</string>
+    <string name="text_action_title">Action 标题</string>
+    <string name="hint_example">打电话给xxx \n呼叫xxx</string>
+    <string name="hint_action_desc">拨打电话，可用别名标记联系人，见 标记管理/联系人</string>
+    <string name="text_instructions">使用说明</string>
+    <string name="text_example">示例</string>
+    <string name="text_share_success">分享成功</string>
+    <string name="text_reg_time">注册时间</string>
+    <string name="text_vip_end_time">会员到期时间</string>
+    <string name="text_failed_to_get_data">获取数据失败</string>
+    <string name="text_logout">注销</string>
+    <string name="text_activate">激活</string>
+    <string name="text_purchase_act_code">购买激活码</string>
+    <string name="text_recharge">充值</string>
+    <string name="text_alipay_pay">支付宝支付</string>
+    <string name="text_wechat_pay">微信支付</string>
+    <string name="text_recharge_code">充值码</string>
+    <string name="text_failed_to_get_user_info">获取其个人信息失败</string>
+    <string name="text_purchase_recharge_code">购买充值码</string>
+    <string name="text_purcharge_recharge_code_msg">通过支付宝转账下方指定金额，或者联系qq获取，在备注填写你的邮箱，不久你会收到含有充值码的邮件，点击下方[使用充值码]继续操作即可。</string>
+    <string name="text_email_copy_to_clip">你的邮箱已复制到剪切板</string>
+    <string name="text_understand">知道了</string>
+    <string name="text_continue">继续</string>
+    <string name="text_debug_service_starting">远程调试已开启</string>
 </resources>
