--- a/Common/src/main/res/values/strings.xml
+++ b/Common/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="text_select_script">Select Script</string>
     <string name="text_stop">Stop</string>
     <string name="text_run">Run</string>
+    <string name="text_err_not_belong_inapp_inst">失败：不属于App内命令</string>
+    <string name="test_have_done">完成</string>
 </resources>
