--- a/Common/src/main/res/values/strings.xml
+++ b/Common/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="text_stop">Stop</string>
     <string name="text_run">Run</string>
     <string name="text_err_not_belong_inapp_inst">失败：不属于App内命令</string>
-    <string name="test_have_done">完成</string>
+    <string name="text_have_done">Done</string>
+    <string name="text_an_err_happened">An error happened</string>
 </resources>
