加入音量上唤醒开关

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -170,4 +170,6 @@
     <string name="text_advanced_user_guide">高级使用手册</string>
     <string name="text_laboratory">实验室</string>
     <string name="text_feedback">反馈</string>
+    <string name="text_wakeup">唤醒</string>
+    <string name="text_long_press_volume_up">长按音量上键</string>
 </resources>
