--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -258,5 +258,8 @@
     <string name="text_advanced_user_guide">Advanced user guide</string>
     <string name="text_laboratory">Laboratory</string>
     <string name="text_feedback">Feedback</string>
+    <string name="key_long_press_volume_up_wake_up" translatable="false">long_press_volume_up_wake_up</string>
+    <string name="text_wakeup">Wake up</string>
+    <string name="text_long_press_volume_up">Long press vol up</string>
 
 </resources>
